fix force close PlayActivity

--- a/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_sign_up.xml
+++ b/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     tools:context=".SignUpActivity"
     android:gravity="center"
-    android:weightSum="10">
+    android:weightSum="10"
+    android:background="@drawable/background2">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
