--- a/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_main.xml
+++ b/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:gravity="center"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/background2">
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
