--- a/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_play.xml
+++ b/Client_Android_mdxt13tk/GameConSoGiDay3/app/src/main/res/layout/activity_play.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PlayActivity">
+    tools:context=".PlayActivity"
+    android:background="@drawable/background2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +63,9 @@
         android:padding="5dp"
         android:text="Câu hỏi"
         android:textSize="20sp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:background="@drawable/question_background"
+        android:layout_margin="10dp"/>
 
     <Button
         android:id="@+id/buttonA"
@@ -71,7 +74,9 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
-        android:text="A" />
+        android:background="@drawable/button_select"
+        android:text="A"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:id="@+id/buttonB"
@@ -80,7 +85,9 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
-        android:text="B" />
+        android:background="@drawable/button_select"
+        android:text="B"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:id="@+id/buttonC"
@@ -89,7 +96,9 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
-        android:text="C" />
+        android:background="@drawable/button_select"
+        android:text="C"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:id="@+id/buttonD"
@@ -98,6 +107,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
+        android:background="@drawable/button_select"
         android:text="D" />
     <ImageView
         android:id="@+id/imageviewMinion"
